<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">零食蜂</string>
    
    <string name="not_deliver">未配送</string>
    <string name="handing">进行中</string>
    <string name="information">个人信息</string>
    <string name="orders">所有订单</string>
    
    <string name="delivering">配送中</string>
    <string name="delivered">已送达</string>
	<string name="payed">已结算</string>
	
	<string name="pull">下拉刷新</string>
	<string name="relese">释放刷新</string>
	<string name="loading">正在刷新</string>
	
	<!-- 订单列表显示mark -->
	<string name="order_detail_mark">订单详情</string>
	<string name="default_order_item_mark">套餐详情</string>
	<string name="sell_order_item_mark">销售详情</string>
	<string name="sell_order_item_mark_no">还未结算,无销售详情</string>
	<string name="edite_sell_order">结算</string>
	<string name="order_info_mark">订单信息</string>
	<string name="food_number_mark">数量</string>
	<string name="food_name_mark">食品名</string>
	<string name="food_sell_price_mark">价格</string>
	<string name="default_total_mark">总价:</string>
	<string name="food_number_residue_mark">剩余数量</string>
	<string name="food_price_mark">总价</string>
	<string name="order_query_id_mark">单号:</string>
	<string name="order_school_mark">学          校:</string>
	<string name="order_address_mark">寝室地址:</string>
	<string name="order_sellmoney_mark">总          价:</string>
	<string name="order_send_time_mark">送达时间:</string>
	<string name="order_create_time_mark">创建时间:</string>
	<string name="order_note">备          注:</string>
	
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	
	<string name="input_phone_note">请输入电话号码</string>
	<string name="input_password_note">请输入密码</string>
	<string name="login_button">登陆</string>
	<string name="logining_tip">登陆中</string>
	<string name="logout_button">退出登陆</string>
	
	<string name="no_data">没有数据，请待会点击重试</string>
	<string name="no_net_work">网络不可用，请检查网络设置，点击重试</string>
	<string name="loading_data">加载中，请稍候</string>
	<string name="login_timeout">登陆超时</string>
	
	<string name="staff_name_mark">姓名</string>
	<string name="staff_phone_mark">电话</string>
	<string name="staff_email_mark">邮箱</string>
	<string name="staff_join_time_mark">加入时间</string>
	<string name="staff_manage_dorm_mark">负责寝室</string>
	
	<string name="check_version_mark">检测更新</string>
	<string name="scanner_mark">扫一扫</string>

	<string name="phone_null">暂无</string>
	
</resources>
