<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/activity_background_orderdetail" >

    <RelativeLayout
        android:id="@+id/edite_sell_detail_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/sell_order_item_mark"
            android:textColor="@color/orderdetail_1"
            android:textSize="@dimen/dialog_title" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/edite_sell_item"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:minHeight="50dp"
        android:layout_below="@id/edite_sell_detail_title" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/edite_sell_item_content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/food_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/order_detail_sell_"
                    android:paddingLeft="@dimen/activity_orderdetail_default_left"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:text="@string/food_name_mark"
                    android:textColor="@color/orderdetail_2"
                    android:textSize="@dimen/dialog_mark1" />

                <TextView
                    android:id="@+id/food_number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/order_detail_sell_0"
                    android:gravity="center"
                    android:text="@string/food_number_residue_mark"
                    android:textColor="@color/orderdetail_2"
                    android:textSize="@dimen/dialog_mark1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edite_sell_items"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edite_sell_item_content_title"
                android:orientation="vertical" >
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edite_sell_item"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"       
            style="@style/buttonStyle"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="5dp"
            style="@style/buttonStyle"
            android:text="@string/confirm" />
    </LinearLayout>

</RelativeLayout>