<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/logoinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="@dimen/title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/logoinfo"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/phone_icon" />

        <EditText
            android:id="@+id/input_phone_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/input_phone_note"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/input_phone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/password_icon" />

        <EditText
            android:id="@+id/input_password_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/input_password_note"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/input_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_pressed_selector"
        android:gravity="center"
        android:text="@string/login_button"
        android:textColor="#fff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cover"
        android:orientation="vertical" >
		<LinearLayout 
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
		    android:orientation="vertical">
		    <ProgressBar
            	android:id="@+id/foot_progress"
            	style="@style/CustomProgressStyle"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
             />
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/logining_tip"
		        />
		</LinearLayout>
         
    </RelativeLayout>

</RelativeLayout>